--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ See if you can guess it.
 </p>
 <div class="form">
     <label for="guessField">Enter a guess: </label>
-    <input type = "text" id = "guessField" class = "guessField"> //input for customer provided number
+    <input type = "text" id = "guessField" class = "guessField"> 
    <br> <br><input type = "submit" value = "Submit guess" 
            class = "guessSubmit" id = "submitguess">
            <p id="result"> </p><br>
